[gd_scene load_steps=14 format=3 uid="uid://d37cg1pavc2pi"]

[ext_resource type="Script" path="res://scenes/levels/1/Level.gd" id="1_yvcr2"]
[ext_resource type="Texture2D" uid="uid://df8fhpivbj061" path="res://textures/bg.png" id="2_hdmdg"]
[ext_resource type="TileSet" uid="uid://cr3l7pr7w56ty" path="res://scenes/levels/tile_set.tres" id="3_n22no"]
[ext_resource type="PackedScene" path="res://scenes/door/door.tscn" id="4_hhlht"]
[ext_resource type="PackedScene" uid="uid://xfm8yn2sksv2" path="res://scenes/levels/obstacles/spykes.tscn" id="5_63wlw"]

[sub_resource type="Curve" id="Curve_lvv61"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.996815, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_146a1"]
curve = SubResource("Curve_lvv61")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_27deq"]
lifetime_randomness = 0.2
emission_shape = 3
emission_box_extents = Vector3(408.72, 78.12, 0)
particle_flag_disable_z = true
spread = 180.0
flatness = 1.0
gravity = Vector3(0, 0, 0)
initial_velocity_max = 2.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 3.0
scale_max = 3.0
scale_curve = SubResource("CurveTexture_146a1")
color = Color(1, 0.972549, 0.72549, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_fly30"]
load_path = "res://.godot/imported/tilesheet.png-9b749bc3945d3cd68979363b5b813ea7.ctex"

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8m5m3"]
texture = SubResource("CompressedTexture2D_fly30")
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:0/0/terrains_peering_bit/right_side = 0
0:0/0/terrains_peering_bit/bottom_side = 0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0/terrains_peering_bit/right_side = 0
1:0/0/terrains_peering_bit/left_side = 0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0/terrains_peering_bit/bottom_side = 0
2:0/0/terrains_peering_bit/left_side = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0/terrains_peering_bit/bottom_side = 0
0:1/0/terrains_peering_bit/top_side = 0
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0/terrains_peering_bit/right_side = 0
0:2/0/terrains_peering_bit/top_side = 0
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0/terrains_peering_bit/left_side = 0
2:2/0/terrains_peering_bit/top_side = 0
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrain = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0/terrains_peering_bit/right_side = 0
3:0/0/terrains_peering_bit/bottom_right_corner = 0
3:0/0/terrains_peering_bit/bottom_side = 0
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrain = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0/terrains_peering_bit/right_side = 0
3:1/0/terrains_peering_bit/bottom_right_corner = 0
3:1/0/terrains_peering_bit/bottom_side = 0
3:1/0/terrains_peering_bit/top_side = 0
3:1/0/terrains_peering_bit/top_right_corner = 0
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/terrain = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0/terrains_peering_bit/right_side = 0
3:2/0/terrains_peering_bit/top_side = 0
3:2/0/terrains_peering_bit/top_right_corner = 0
4:2/0 = 0
4:2/0/terrain_set = 0
4:2/0/terrain = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0/terrains_peering_bit/right_side = 0
4:2/0/terrains_peering_bit/left_side = 0
4:2/0/terrains_peering_bit/top_left_corner = 0
4:2/0/terrains_peering_bit/top_side = 0
4:2/0/terrains_peering_bit/top_right_corner = 0
4:1/0 = 0
4:1/0/terrain_set = 0
4:1/0/terrain = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0/terrains_peering_bit/right_side = 0
4:1/0/terrains_peering_bit/bottom_right_corner = 0
4:1/0/terrains_peering_bit/bottom_side = 0
4:1/0/terrains_peering_bit/bottom_left_corner = 0
4:1/0/terrains_peering_bit/left_side = 0
4:1/0/terrains_peering_bit/top_left_corner = 0
4:1/0/terrains_peering_bit/top_side = 0
4:1/0/terrains_peering_bit/top_right_corner = 0
4:0/0 = 0
4:0/0/terrain_set = 0
4:0/0/terrain = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0/terrains_peering_bit/right_side = 0
4:0/0/terrains_peering_bit/bottom_right_corner = 0
4:0/0/terrains_peering_bit/bottom_side = 0
4:0/0/terrains_peering_bit/bottom_left_corner = 0
4:0/0/terrains_peering_bit/left_side = 0
5:0/0 = 0
5:0/0/terrain_set = 0
5:0/0/terrain = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0/terrains_peering_bit/bottom_side = 0
5:0/0/terrains_peering_bit/bottom_left_corner = 0
5:0/0/terrains_peering_bit/left_side = 0
5:1/0 = 0
5:1/0/terrain_set = 0
5:1/0/terrain = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0/terrains_peering_bit/bottom_side = 0
5:1/0/terrains_peering_bit/bottom_left_corner = 0
5:1/0/terrains_peering_bit/left_side = 0
5:1/0/terrains_peering_bit/top_left_corner = 0
5:1/0/terrains_peering_bit/top_side = 0
5:2/0 = 0
5:2/0/terrain_set = 0
5:2/0/terrain = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0/terrains_peering_bit/left_side = 0
5:2/0/terrains_peering_bit/top_left_corner = 0
5:2/0/terrains_peering_bit/top_side = 0
6:0/0 = 0
6:0/0/terrain_set = 0
6:0/0/terrain = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0 = 0
4:3/0/terrain_set = 0
4:3/0/terrain = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0/terrains_peering_bit/right_side = 0
4:3/0/terrains_peering_bit/bottom_side = 0
4:3/0/terrains_peering_bit/left_side = 0
4:5/0 = 0
4:5/0/terrain_set = 0
4:5/0/terrain = 0
4:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:5/0/physics_layer_0/angular_velocity = 0.0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:5/0/terrains_peering_bit/right_side = 0
4:5/0/terrains_peering_bit/left_side = 0
4:5/0/terrains_peering_bit/top_side = 0
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/terrain = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0/terrains_peering_bit/bottom_side = 0
1:4/0 = 0
1:4/0/terrain_set = 0
1:4/0/terrain = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0/terrains_peering_bit/right_side = 0
1:4/0/terrains_peering_bit/bottom_side = 0
1:4/0/terrains_peering_bit/left_side = 0
1:4/0/terrains_peering_bit/top_side = 0
1:5/0 = 0
1:5/0/terrain_set = 0
1:5/0/terrain = 0
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0/terrains_peering_bit/top_side = 0
0:4/0 = 0
0:4/0/terrain_set = 0
0:4/0/terrain = 0
0:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:4/0/physics_layer_0/angular_velocity = 0.0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:4/0/terrains_peering_bit/right_side = 0
2:4/0 = 0
2:4/0/terrain_set = 0
2:4/0/terrain = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0/terrains_peering_bit/left_side = 0
6:4/0 = 0
6:4/0/terrain_set = 0
6:4/0/terrain = 0
6:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:4/0/physics_layer_0/angular_velocity = 0.0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:4/0/terrains_peering_bit/right_side = 0
6:4/0/terrains_peering_bit/bottom_side = 0
6:4/0/terrains_peering_bit/top_side = 0
8:4/0 = 0
8:4/0/terrain_set = 0
8:4/0/terrain = 0
8:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:4/0/physics_layer_0/angular_velocity = 0.0
8:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:4/0/terrains_peering_bit/bottom_side = 0
8:4/0/terrains_peering_bit/left_side = 0
8:4/0/terrains_peering_bit/top_side = 0
5:7/0 = 0
5:7/0/terrain_set = 0
5:7/0/terrain = 0
5:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:7/0/physics_layer_0/angular_velocity = 0.0
5:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:7/0/terrains_peering_bit/right_side = 0
5:7/0/terrains_peering_bit/left_side = 0
5:7/0/terrains_peering_bit/top_side = 0
5:7/0/terrains_peering_bit/top_right_corner = 0
6:7/0 = 0
6:7/0/terrain_set = 0
6:7/0/terrain = 0
6:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:7/0/physics_layer_0/angular_velocity = 0.0
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:7/0/terrains_peering_bit/right_side = 0
6:7/0/terrains_peering_bit/left_side = 0
6:7/0/terrains_peering_bit/top_left_corner = 0
6:7/0/terrains_peering_bit/top_side = 0
6:8/0 = 0
6:8/0/terrain_set = 0
6:8/0/terrain = 0
6:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:8/0/physics_layer_0/angular_velocity = 0.0
6:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:8/0/terrains_peering_bit/right_side = 0
6:8/0/terrains_peering_bit/bottom_side = 0
6:8/0/terrains_peering_bit/bottom_left_corner = 0
6:8/0/terrains_peering_bit/left_side = 0
5:8/0 = 0
5:8/0/terrain_set = 0
5:8/0/terrain = 0
5:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:8/0/physics_layer_0/angular_velocity = 0.0
5:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:8/0/terrains_peering_bit/right_side = 0
5:8/0/terrains_peering_bit/bottom_right_corner = 0
5:8/0/terrains_peering_bit/bottom_side = 0
5:8/0/terrains_peering_bit/left_side = 0
1:7/0 = 0
1:7/0/terrain_set = 0
1:7/0/terrain = 0
1:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:7/0/physics_layer_0/angular_velocity = 0.0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:7/0/terrains_peering_bit/bottom_side = 0
1:7/0/terrains_peering_bit/bottom_left_corner = 0
1:7/0/terrains_peering_bit/left_side = 0
1:7/0/terrains_peering_bit/top_side = 0
1:8/0 = 0
1:8/0/terrain_set = 0
1:8/0/terrain = 0
1:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:8/0/physics_layer_0/angular_velocity = 0.0
1:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:8/0/terrains_peering_bit/bottom_side = 0
1:8/0/terrains_peering_bit/left_side = 0
1:8/0/terrains_peering_bit/top_left_corner = 0
1:8/0/terrains_peering_bit/top_side = 0
2:8/0 = 0
2:8/0/terrain_set = 0
2:8/0/terrain = 0
2:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:8/0/physics_layer_0/angular_velocity = 0.0
2:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:8/0/terrains_peering_bit/right_side = 0
2:8/0/terrains_peering_bit/bottom_side = 0
2:8/0/terrains_peering_bit/top_side = 0
2:8/0/terrains_peering_bit/top_right_corner = 0
2:7/0 = 0
2:7/0/terrain_set = 0
2:7/0/terrain = 0
2:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:7/0/physics_layer_0/angular_velocity = 0.0
2:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:7/0/terrains_peering_bit/right_side = 0
2:7/0/terrains_peering_bit/bottom_right_corner = 0
2:7/0/terrains_peering_bit/bottom_side = 0
2:7/0/terrains_peering_bit/top_side = 0
2:11/0 = 0
2:11/0/terrain_set = 0
2:11/0/terrain = 0
2:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:11/0/physics_layer_0/angular_velocity = 0.0
2:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:11/0/terrains_peering_bit/right_side = 0
2:11/0/terrains_peering_bit/bottom_right_corner = 0
2:11/0/terrains_peering_bit/bottom_side = 0
2:11/0/terrains_peering_bit/bottom_left_corner = 0
2:11/0/terrains_peering_bit/left_side = 0
2:11/0/terrains_peering_bit/top_left_corner = 0
2:11/0/terrains_peering_bit/top_side = 0
2:12/0 = 0
2:12/0/terrain_set = 0
2:12/0/terrain = 0
2:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:12/0/physics_layer_0/angular_velocity = 0.0
2:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:12/0/terrains_peering_bit/right_side = 0
2:12/0/terrains_peering_bit/bottom_side = 0
2:12/0/terrains_peering_bit/bottom_left_corner = 0
2:12/0/terrains_peering_bit/left_side = 0
2:12/0/terrains_peering_bit/top_left_corner = 0
2:12/0/terrains_peering_bit/top_side = 0
2:12/0/terrains_peering_bit/top_right_corner = 0
1:12/0 = 0
1:12/0/terrain_set = 0
1:12/0/terrain = 0
1:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:12/0/physics_layer_0/angular_velocity = 0.0
1:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:12/0/terrains_peering_bit/right_side = 0
1:12/0/terrains_peering_bit/bottom_right_corner = 0
1:12/0/terrains_peering_bit/bottom_side = 0
1:12/0/terrains_peering_bit/left_side = 0
1:12/0/terrains_peering_bit/top_left_corner = 0
1:12/0/terrains_peering_bit/top_side = 0
1:12/0/terrains_peering_bit/top_right_corner = 0
1:11/0 = 0
1:11/0/terrain_set = 0
1:11/0/terrain = 0
1:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:11/0/physics_layer_0/angular_velocity = 0.0
1:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:11/0/terrains_peering_bit/right_side = 0
1:11/0/terrains_peering_bit/bottom_right_corner = 0
1:11/0/terrains_peering_bit/bottom_side = 0
1:11/0/terrains_peering_bit/bottom_left_corner = 0
1:11/0/terrains_peering_bit/left_side = 0
1:11/0/terrains_peering_bit/top_side = 0
1:11/0/terrains_peering_bit/top_right_corner = 0
5:12/0 = 0
5:12/0/terrain_set = 0
5:12/0/terrain = 0
5:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:12/0/physics_layer_0/angular_velocity = 0.0
5:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:12/0/terrains_peering_bit/right_side = 0
5:12/0/terrains_peering_bit/bottom_right_corner = 0
5:12/0/terrains_peering_bit/bottom_side = 0
5:12/0/terrains_peering_bit/left_side = 0
5:12/0/terrains_peering_bit/top_side = 0
5:12/0/terrains_peering_bit/top_right_corner = 0
6:11/0 = 0
6:11/0/terrain_set = 0
6:11/0/terrain = 0
6:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:11/0/physics_layer_0/angular_velocity = 0.0
6:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:11/0/terrains_peering_bit/right_side = 0
6:11/0/terrains_peering_bit/bottom_right_corner = 0
6:11/0/terrains_peering_bit/bottom_side = 0
6:11/0/terrains_peering_bit/bottom_left_corner = 0
6:11/0/terrains_peering_bit/left_side = 0
6:11/0/terrains_peering_bit/top_side = 0
7:12/0 = 0
7:12/0/terrain_set = 0
7:12/0/terrain = 0
7:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:12/0/physics_layer_0/angular_velocity = 0.0
7:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:12/0/terrains_peering_bit/right_side = 0
7:12/0/terrains_peering_bit/bottom_side = 0
7:12/0/terrains_peering_bit/bottom_left_corner = 0
7:12/0/terrains_peering_bit/left_side = 0
7:12/0/terrains_peering_bit/top_left_corner = 0
7:12/0/terrains_peering_bit/top_side = 0
6:13/0 = 0
6:13/0/terrain_set = 0
6:13/0/terrain = 0
6:13/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:13/0/physics_layer_0/angular_velocity = 0.0
6:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:13/0/terrains_peering_bit/right_side = 0
6:13/0/terrains_peering_bit/bottom_side = 0
6:13/0/terrains_peering_bit/left_side = 0
6:13/0/terrains_peering_bit/top_left_corner = 0
6:13/0/terrains_peering_bit/top_side = 0
6:13/0/terrains_peering_bit/top_right_corner = 0
1:15/0 = 0
1:15/0/terrain_set = 0
1:15/0/terrain = 0
1:15/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:15/0/physics_layer_0/angular_velocity = 0.0
1:15/0/terrains_peering_bit/right_side = 0
1:15/0/terrains_peering_bit/bottom_side = 0
1:15/0/terrains_peering_bit/bottom_left_corner = 0
1:15/0/terrains_peering_bit/left_side = 0
1:15/0/terrains_peering_bit/top_side = 0
1:15/0/terrains_peering_bit/top_right_corner = 0
4:15/0 = 0
4:15/0/terrain_set = 0
4:15/0/terrain = 0
4:15/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:15/0/physics_layer_0/angular_velocity = 0.0
4:15/0/terrains_peering_bit/right_side = 0
4:15/0/terrains_peering_bit/bottom_right_corner = 0
4:15/0/terrains_peering_bit/bottom_side = 0
4:15/0/terrains_peering_bit/left_side = 0
4:15/0/terrains_peering_bit/top_left_corner = 0
4:15/0/terrains_peering_bit/top_side = 0

[sub_resource type="TileSet" id="TileSet_n8l10"]
physics_layer_0/collision_layer = 1
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Grass"
terrain_set_0/terrain_0/color = Color(1, 0.101961, 0.552941, 1)
sources/0 = SubResource("TileSetAtlasSource_8m5m3")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jvj4h"]
size = Vector2(905, 302.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nrch5"]
size = Vector2(15, 74)

[node name="Level" type="Node2D"]
script = ExtResource("1_yvcr2")
camera_limits = Rect2(0, 0, 370, 200)

[node name="SkyLayer" type="CanvasLayer" parent="."]
layer = -3

[node name="TextureRect" type="TextureRect" parent="SkyLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_hdmdg")
metadata/_edit_use_anchors_ = true

[node name="BackLayer" type="CanvasLayer" parent="."]
layer = -2
follow_viewport_enabled = true
follow_viewport_scale = 0.7

[node name="GPUParticles2D2" type="GPUParticles2D" parent="BackLayer"]
position = Vector2(188, 133)
scale = Vector2(2.48, 1.88)
amount = 24
process_material = SubResource("ParticleProcessMaterial_27deq")
lifetime = 5.0
preprocess = 19.78

[node name="TileMap" type="TileMap" parent="BackLayer"]
texture_filter = 1
tile_set = ExtResource("3_n22no")
format = 2
layer_0/z_index = 1

[node name="CanvasModulate" type="CanvasModulate" parent="BackLayer"]
color = Color(1, 1, 1, 0.560784)

[node name="MiddleLayer" type="CanvasLayer" parent="."]
layer = -1
follow_viewport_enabled = true
follow_viewport_scale = 0.9

[node name="GPUParticles2D2" type="GPUParticles2D" parent="MiddleLayer"]
position = Vector2(188, 133)
scale = Vector2(2.48, 1.88)
amount = 24
process_material = SubResource("ParticleProcessMaterial_27deq")
lifetime = 5.0
preprocess = 19.78

[node name="TileMap" type="TileMap" parent="MiddleLayer"]
texture_filter = 1
tile_set = ExtResource("3_n22no")
format = 2
layer_0/z_index = 1

[node name="CanvasModulate" type="CanvasModulate" parent="MiddleLayer"]
color = Color(0.54902, 0.54902, 0.894118, 1)

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
tile_set = SubResource("TileSet_n8l10")
format = 2
layer_0/z_index = 1
layer_0/tile_data = PackedInt32Array(720899, 0, 4, 720900, 65536, 0, 720901, 327680, 8, 720902, 262144, 0, 720903, 262144, 0, 720904, 393216, 8, 720905, 65536, 0, 720906, 65536, 0, 720908, 262144, 0, 720907, 327680, 8, 720909, 262144, 0, 720910, 262144, 0, 720911, 262144, 0, 720912, 262144, 0, 720913, 393216, 8, 720914, 65536, 0, 720915, 65536, 0, 720916, 65536, 0, 786437, 196608, 2, 786438, 262144, 2, 786439, 262144, 2, 786440, 65536, 8, 851976, 65536, 5, 786443, 196608, 2, 786444, 262144, 2, 786445, 262144, 2, 786446, 262144, 2, 786447, 262144, 2, 786449, 327680, 2, 786448, 262144, 2, 720917, 65536, 0, 720918, 65536, 0, 720919, 65536, 0, 720920, 65536, 0, 720921, 65536, 0, 720922, 65536, 0, 720923, 65536, 0, 720925, 65536, 0, 720924, 65536, 0, 720926, 65536, 0, 720927, 65536, 0, 720928, 65536, 0, 720929, 65536, 0, 720930, 65536, 0, 720931, 65536, 0, 720932, 65536, 0, 720933, 65536, 0, 720934, 65536, 0, 720935, 65536, 0, 720936, 65536, 0, 720939, 65536, 0, 720938, 65536, 0, 720937, 65536, 0, 720940, 65536, 0, 720941, 65536, 0, 720942, 65536, 0, 720943, 65536, 0, 720944, 65536, 0, 720945, 65536, 0, 720946, 131072, 4)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(448, 127)
scale = Vector2(2.48, 1.88)
amount = 35
process_material = SubResource("ParticleProcessMaterial_27deq")
lifetime = 8.0
preprocess = 19.78

[node name="GameArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameArea"]
visible = false
position = Vector2(424.5, 123.25)
shape = SubResource("RectangleShape2D_jvj4h")

[node name="Door" parent="." instance=ExtResource("4_hhlht")]
position = Vector2(322, 166)
collision_layer = 2
collision_mask = 2
Level = "res://scenes/levels/2/Level.tscn"
door_position = Vector2(13, 173.31)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door"]
position = Vector2(20, -23)
shape = SubResource("RectangleShape2D_nrch5")

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = 5
limit_top = 20
limit_right = 855
limit_bottom = 250
editor_draw_limits = true

[node name="Spykes" parent="." instance=ExtResource("5_63wlw")]

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="body_exited" from="GameArea" to="." method="_on_game_area_body_exited"]
